update scanbox page
add some informations in this pages
route api  camera/{id}/status add dto format
